integ-tests/tests/snapshots/parser__bad_inline_tables__only_comma.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ only_comma:1:6
  │
1 │ a = {,}
  │      ^^^ expected a table key


